--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
+# The Docker image that will be used to build your app
 image: alpine:latest
+# Functions that should be executed before the build script is run
 build-job:
   stage: build
   script:
