--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,39 @@
-# The Docker image that will be used to build your app
-image: alpine:latest
-# Functions that should be executed before the build script is run
+image: node:20-alpine  # Using Node.js image instead of alpine
+
+stages:
+  - build
+  - test
+  - deploy
+
 build-job:
   stage: build
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
+    - npm install
+    - npm run build
+  artifacts:
+    paths:
+      - dist/  # Angular builds to dist directory by default
 
 test-job1:
   stage: test
   script:
-    - echo "This job tests something"
+    - npm install
+    - npm run test --watch=false  # Run tests in CI mode
 
 test-job2:
   stage: test
   script:
     - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
     - sleep 20
 
-deploy-prod:
+pages:
   stage: deploy
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
-  environment: production
+    - npm install
+    - npm run build
+    - cp -r dist/*/browser/* public/  # Copy Angular build output to public directory
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
