Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 build-job:
   stage: build
   script:
-    - npm install
+    - npm install --legacy-peer-deps
     - npm run build
   artifacts:
     paths:
