Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,8 +39,10 @@ pages:
   script:
     - npm install --legacy-peer-deps
     - npm run build
+    - rm -rf public  
     - mkdir -p public
-    - cp -r dist/*/browser/* public/
+    - ls -la dist  # Debug: see what's in dist
+    - cp -r dist/habit-tracker-dashboard/browser/* public/
   artifacts:
     paths:
       - public
