--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.7",
-    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@swimlane/ngx-charts": "^21.1.2",
+    "bootstrap": "^5.3.3",
     "cypress": "^13.17.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
