--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,14 +36,13 @@ deploy-prod:
 
 pages:
   stage: deploy
+  dependencies:
+    - build-job
   script:
-    - npm install --legacy-peer-deps
-    - npm run build
-    - rm -rf public 
+    - rm -rf public
     - cp -r dist/habit-tracker-dashboard/browser public
   artifacts:
     paths:
       - public
   only:
     - main
-
