--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ deploy-prod:
 
 pages:
   script:
-    - npm install
+    - npm install --legacy-peer-deps
     - npm run build --prod
     - mkdir -p public
     - cp -r dist/habit-tracker-dashboard/browser/* public
