--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,33 +17,29 @@ build-job:
 test-job1:
   stage: test
   script:
-    - npm install --legacy-peer-deps
+    - npm install --legacy-peer-deps  # Added --legacy-peer-deps flag
     - npm run test --watch=false
 
 test-job2:
   stage: test
-  needs:
-    - test-job1
   script:
-    - echo "Simulating a longer-running test job."
+    - echo "This job tests something, but takes more time than test-job1."
+    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+    - echo "which simulates a test that runs 20 seconds longer than test-job1"
     - sleep 20
 
-deploy-prod:
+pages:
   stage: deploy
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
-  environment: production
-
-pages:
-  script:
     - npm install --legacy-peer-deps
-    - npm run build --prod
-    - mkdir -p public
-    - cp -r dist/habit-tracker-dashboard/browser/* public
+    - npm run build
+    - rm -rf .public
+    - cp -r dist/habit-tracker-dashboard/browser public
   artifacts:
     paths:
       - public
   only:
     - main
+
   after_script:
     - echo "/*    /index.html   200" > public/_redirects
